--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: sobolnp
 Type: Package
-Title: Nonparametric Sobol estimator with bootstrap bandwidth
+Title: Nonparametric Sobol Estimator with Bootstrap Bandwidth
 Version: 0.1.0
-Author@R: person("Maikol", "Solís", ,"maikol.solis@ucr.ac.cr", c("aut", "cre"), comment = c(ORCID = "0000-0002-8776-6142"))
-Author: Maikol Solís <https://orcid.org/0000-0002-8776-6142>
+Author: Maikol Solís <maikol.solis@ucr.ac.cr>
 Maintainer: Maikol Solís <maikol.solis@ucr.ac.cr>
-Description: This package estimate the sobol indices using a non-parametric fit of the regression curve. The bandwidth is estimated using bootstrap to reduce the bias.   
+Description: Algorithm to estimate the Sobol indices using a non-parametric fit of the regression curve. The bandwidth is estimated using bootstrap to reduce the finite-sample bias.   
 License: MIT + file LICENSE
 URL: https://github.com/maikol-solis/sobolnp/
 BugReports: https://github.com/maikol-solis/sobolnp/issues
@@ -13,3 +12,4 @@ Imports: np, minqa, pbmcapply
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Encoding: UTF-8
