--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ import(np)
 import(pbmcapply)
 importFrom(graphics,axis)
 importFrom(graphics,legend)
+importFrom(graphics,plot.default)
 importFrom(graphics,segments)
 importFrom(stats,residuals)
 importFrom(stats,var)
