--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Nonparametric Sobol Estimator with Bootstrap Bandwidth
 Version: 0.1.0
 Author: Maikol Solís <maikol.solis@ucr.ac.cr>
 Maintainer: Maikol Solís <maikol.solis@ucr.ac.cr>
-Description: Algorithm to estimate the Sobol indices using a non-parametric fit of the regression curve. The bandwidth is estimated using bootstrap to reduce the finite-sample bias.   
+Description: Algorithm to estimate the Sobol indices using a non-parametric fit of the regression curve. The bandwidth is estimated using bootstrap to reduce the finite-sample bias. The package is based in the paper Solís, M. (2018) <arXiv:1803.03333>.   
 License: MIT + file LICENSE
 URL: https://github.com/maikol-solis/sobolnp/
 BugReports: https://github.com/maikol-solis/sobolnp/issues
